# Airtrace-RU

./: .gitignore  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT_CHECKLIST.md  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEDIUM_LOW_PRIORITY_FIXES.md  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v2.1.0.md  alert_rule_engine.py  anomaly_detection.py  cache.py  confidence_scoring.py  config.py  config_audit_manager.py  connection_pool.py  docker-compose.prod.yml  graceful_degradation.py  health_status.json  history_ingestion.py  http_transport.py  magnitogorsk_current.json  magnitogorsk_forecast.json  main.py  middleware.py  performance_integration.py  performance_monitor.py  privacy_compliance_validator.py  prometheus_exporter.py  prompt.md  pyproject.toml  rate_limit_middleware.py  rate_limit_monitoring.py  rate_limit_types.py  rate_limiter.py  remove_bom.py  request_optimizer.py  (+15 more)
docs/: accessibility_baseline.md  api_v2_compatibility.md  ci_pipeline_hardening.md  health_probes.md  history_data_platform.md  http_transport_policy.md  incident_runbooks.md  load_soak_testing.md  production_compose_profile.md  public_api_v2.md  slo_runtime_control.md  ux_smoke_checklist.md
examples/: js_sdk_example.mjs  python_sdk_example.py
migrations/: 001_history_schema.sql
sdk/python/: README.md  pyproject.toml
sdk/python/src/airtrace_sdk/: __init__.py  client.py
tests/: __init__.py  conftest.py  test_alert_api.py  test_alert_rule_engine.py  test_alert_telegram_api.py  test_anomaly_detection.py  test_api_compatibility_russian_localization.py  test_basic.py  test_cache_invalidation_keyspace.py  test_ci_pipeline_assets.py  test_config_audit_manager.py  test_connection_pool_queuing.py  test_contract_snapshot.py  test_critical_fixes.py  test_daily_digest.py  test_forecast_horizon_processing.py  test_health_probes.py  test_history_api_contract.py  test_history_export_integration.py  test_history_ingestion_pipeline.py  test_http_transport_policy.py  test_incident_runbook_assets.py  test_integration.py  test_js_sdk_starter_assets.py  test_load_suite_assets.py  test_medium_priority_fixes.py  test_multi_api_fallback.py  test_observability_assets.py  test_performance_integration.py  test_pool_saturation_fallback.py  test_privacy_validator_import_safety.py  test_production_compose_assets.py  test_property_api_response_format.py  test_property_aqi_calculation.py  test_property_cache_failure_resilience.py  test_property_cache_fallback.py  test_property_cache_key_privacy.py  test_property_cache_lifecycle.py  test_property_cache_operation_consistency.py  (+36 more)
(+23 files in other folders)
