[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airtrace-ru-sdk"
version = "0.3.1"
description = "Minimal Python SDK starter for AirTrace RU API v2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
